# goit-python-web-hw8-i

./: README.md  commander.py  main.py  pyproject.toml  seeds.py
db/: models.py  seeds.py
reed_data/: quotes_by_author.py  quotes_by_tag.py  quotes_by_tags.py
test/: test.py
utilities/: command_handler.py  commander.py  commands.py  sortie.py
