[tool.poetry]
name = "goit-python-web-hw8-i"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw8_i"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"
certifi = "^2023.7.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
